Revision history for perl module CPAN::Changes

0.27 2013-12-13

  [ Spec Changes ]

  - Bump version to 0.04

  - Allow non-"word" characters between a Version and a Date

0.26 2013-11-21

  - Fix reference issues when adding a release (RT #90605)

0.25 2013-10-08

  - Move Text::Wrap usage to proper module (Michal Spacek)

  - Typo fix (Karen Etheridge)

0.24 2013-10-07

  - Fix Dist::Zilla date parsing. Now puts timezone data in 
    note section (Github #17)

0.23 2013-08-14

  [ Spec Changes ]

  - Bump version to 0.03

  - Allow the "T" marker in W3CDTF to be omitted

  [ Code Changes ]

  - Be more strict about what we consider to be a Dist::Zilla-style date
    to avoid false positive matches

  - Update W3CDTF parsing to make the "T" marker optional (RT #87499)

  - Fix extra whitespace for empty values after version (RT #87524)

0.22 2013-07-30

  - Sync module versions (RT #87455)

0.21 2013-07-30

  [ Spec Changes ]

  - Bump version to 0.02

  - Added "unknown/dev" release date options (RT #67705)

  - Added optional release note (RT #69321)

  - Added another preamble example

  - Added a note about line length

  [ Code Changes ]

  - Require Test::More 0.96 (RT #84994)

  - Added --check and --help flags to tidy_changelog script (Gabor Szabo)

  - Properly parse multi-line preamble

  - Test::CPAN::Changes now warns about parsed dates not in spec-compliant form

  - Handle unknown/dev release dates and release note from new spec

0.20 2013-05-01

  - 'delete_empty_groups' shouldn't erronously delete default group 
    (Yanick Champoux)

  - Add tidy_changelog utility script (Yanick Champoux)

  - Minor pod fix

0.19 2012-04-30

  - Test::CPAN::Changes now accepts version entries ending in '-TRIAL' (RT
    #76882, Karen Etheridge)

  - releases() in CPAN::Changes also accepts entries ending in '-TRIAL'

0.18 2011-10-18

  - Expand changes_file_ok() to accept arguments so that a specific version
    may be checked (Ricardo Signes)
